--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -248,11 +248,11 @@ html lang="en"
                     i.fa.fa-circle-o
                     | Interest topics
                 li
-                  = link_to articles_path
+                  = link_to comments_path
                     i.fa.fa-circle-o
                     span = "Data"
                 li
-                  a href="#"
+                  = link_to articles_path
                     i.fa.fa-circle-o
                     | Crawling
 
