--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,12 +1,27 @@
+- if flash[:notice]
+  .alert.alert-success
+    a href="javascript:void(0)" class="close" data-dismiss="alert" aria-label="close"&times;
+    div
+      = flash[:notice]
+- elsif flash[:errors]
+  .alert.alert-danger
+    a href="javascript:void(0)" class="close" data-dismiss="alert" aria-label="close"&times;
+    div
+      = flash[:errors]
+- elsif flash.now[:error]
+  .alert.alert-danger
+    a href="javascript:void(0)" class="close" data-dismiss="alert" aria-label="close"&times;
+    div
+      = flash.now[:error]
 section.content-header
 section.content
   .box.box-danger.data-crawling
-    h1.text-center List interest topics
+    h1.text-center Chu de ua thich cua ban
     - current_user.interest.to_a.each do |i|
       h3 = i
       br
-    h1.text-center Choose some new interest topics
-    h3 Ex: IT,Economic,Money
+    h1.text-center Nhap chu de ua thich
+    h3 Vi du: Ngoc Trinh,Minh Beo,Bien Dong (Cach nhau bang dau phay)
     = form_for current_user do |f|
       .form-group
         .div
