--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -1,7 +1,7 @@
 section.content-header
 section.content
   .box.box-danger.data-crawling
-    h1.text-center DATA DA CRAWLING DUOC
+    h1.text-center DATA DA CRAWLING DUOC (Nguon: dantri.com.vn, vnexpress.net,kenh14.vn,gamek.vn)
     .box-body.table-responsive.no-padding
       table.table-bordered.table-striped.dataTable#example2
         thead
