Update layout crawling data

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -251,6 +251,10 @@ html lang="en"
                   = link_to comments_path
                     i.fa.fa-circle-o
                     span = "Data"
+                li
+                  = link_to articles_path
+                    i.fa.fa-circle-o
+                    span = "Crawling-Data"
 
 
         /! /.sidebar
